--- a/breakpoint/breakpoint/Base.lproj/Main.storyboard
+++ b/breakpoint/breakpoint/Base.lproj/Main.storyboard
@@ -38,6 +38,9 @@
                                             <constraint firstAttribute="height" constant="30" id="eLM-hr-dNc"/>
                                         </constraints>
                                         <state key="normal" image="compose"/>
+                                        <connections>
+                                            <segue destination="1kd-kP-43d" kind="presentation" id="Pbn-D8-dTh"/>
+                                        </connections>
                                     </button>
                                 </subviews>
                                 <color key="backgroundColor" red="0.0" green="0.47843137250000001" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
@@ -81,6 +84,124 @@
                 <placeholder placeholderIdentifier="IBFirstResponder" id="W5J-7L-Pyd" sceneMemberID="firstResponder"/>
             </objects>
             <point key="canvasLocation" x="749.60000000000002" y="-320.68965517241384"/>
+        </scene>
+        <!--Create PostVC-->
+        <scene sceneID="cbg-ic-KO6">
+            <objects>
+                <viewController id="1kd-kP-43d" customClass="CreatePostVC" customModule="breakpoint" customModuleProvider="target" sceneMemberID="viewController">
+                    <view key="view" contentMode="scaleToFill" id="c4o-ue-20E">
+                        <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="Je9-5s-abq" customClass="GradientView" customModule="breakpoint" customModuleProvider="target">
+                                <rect key="frame" x="0.0" y="0.0" width="375" height="70"/>
+                                <subviews>
+                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Post something" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Oyo-0g-o8J">
+                                        <rect key="frame" x="87.5" y="32.5" width="200" height="25"/>
+                                        <constraints>
+                                            <constraint firstAttribute="width" constant="200" id="RjZ-wH-QFL"/>
+                                            <constraint firstAttribute="height" constant="25" id="orB-VH-EH0"/>
+                                        </constraints>
+                                        <fontDescription key="fontDescription" name="AvenirNext-Bold" family="Avenir Next" pointSize="18"/>
+                                        <color key="textColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                        <nil key="highlightedColor"/>
+                                    </label>
+                                    <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="c0A-qO-k2t">
+                                        <rect key="frame" x="20" y="30" width="30" height="30"/>
+                                        <constraints>
+                                            <constraint firstAttribute="width" constant="30" id="hrw-9Q-oGy"/>
+                                            <constraint firstAttribute="height" constant="30" id="iro-6Z-ZbJ"/>
+                                        </constraints>
+                                        <state key="normal" image="close"/>
+                                        <connections>
+                                            <action selector="closeBtnWasPressed:" destination="1kd-kP-43d" eventType="touchUpInside" id="wMg-ut-pj9"/>
+                                        </connections>
+                                    </button>
+                                </subviews>
+                                <color key="backgroundColor" red="0.0" green="0.47843137250000001" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                                <constraints>
+                                    <constraint firstItem="c0A-qO-k2t" firstAttribute="top" secondItem="Je9-5s-abq" secondAttribute="top" constant="30" id="Vpe-G6-TR5"/>
+                                    <constraint firstAttribute="height" constant="70" id="dmy-VQ-iZm"/>
+                                    <constraint firstItem="c0A-qO-k2t" firstAttribute="leading" secondItem="Je9-5s-abq" secondAttribute="leading" constant="20" id="fwI-Ri-HeS"/>
+                                    <constraint firstItem="c0A-qO-k2t" firstAttribute="centerY" secondItem="Oyo-0g-o8J" secondAttribute="centerY" id="tNZ-rr-vlz"/>
+                                    <constraint firstItem="Oyo-0g-o8J" firstAttribute="centerX" secondItem="Je9-5s-abq" secondAttribute="centerX" id="zs3-i8-qER"/>
+                                </constraints>
+                            </view>
+                            <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="defaultProfileImage" translatesAutoresizingMaskIntoConstraints="NO" id="pBh-d1-Kee">
+                                <rect key="frame" x="20" y="90" width="60" height="60"/>
+                                <constraints>
+                                    <constraint firstAttribute="width" constant="60" id="C3J-xT-7DF"/>
+                                    <constraint firstAttribute="height" constant="60" id="h6S-gX-vjF"/>
+                                </constraints>
+                            </imageView>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="soufiane.salouf@gmail.com" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="gCJ-ce-bH4">
+                                <rect key="frame" x="100" y="105.5" width="255" height="30"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="30" id="hVt-TP-dmq"/>
+                                </constraints>
+                                <fontDescription key="fontDescription" name="AvenirNext-Medium" family="Avenir Next" pointSize="18"/>
+                                <nil key="textColor"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                            <textView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" text="What's on your mind ?" textAlignment="natural" translatesAutoresizingMaskIntoConstraints="NO" id="gxm-wU-Osl">
+                                <rect key="frame" x="20" y="170" width="335" height="407"/>
+                                <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                <fontDescription key="fontDescription" name="AvenirNext-Regular" family="Avenir Next" pointSize="18"/>
+                                <textInputTraits key="textInputTraits" autocapitalizationType="sentences"/>
+                            </textView>
+                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="o4N-99-SfT" customClass="RoundedButton" customModule="breakpoint" customModuleProvider="target">
+                                <rect key="frame" x="20" y="597" width="335" height="50"/>
+                                <color key="backgroundColor" red="0.35686274509999999" green="0.62352941179999999" blue="0.79607843140000001" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="50" id="oot-mt-sd4"/>
+                                </constraints>
+                                <fontDescription key="fontDescription" name="HelveticaNeue-Bold" family="Helvetica Neue" pointSize="17"/>
+                                <color key="tintColor" red="0.35686274509999999" green="0.62352941179999999" blue="0.79607843140000001" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                                <state key="normal" title="POST">
+                                    <color key="titleColor" white="1" alpha="1" colorSpace="custom" customColorSpace="calibratedWhite"/>
+                                </state>
+                                <userDefinedRuntimeAttributes>
+                                    <userDefinedRuntimeAttribute type="number" keyPath="cornerRadius">
+                                        <real key="value" value="6"/>
+                                    </userDefinedRuntimeAttribute>
+                                </userDefinedRuntimeAttributes>
+                                <connections>
+                                    <action selector="postBtnWasPressed:" destination="1kd-kP-43d" eventType="touchUpInside" id="P9X-ze-J4b"/>
+                                    <action selector="signInBtnWasPressed:" destination="Ovb-EB-Gqc" eventType="touchUpInside" id="Qzl-WD-Jv7"/>
+                                </connections>
+                            </button>
+                        </subviews>
+                        <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                        <constraints>
+                            <constraint firstItem="Je9-5s-abq" firstAttribute="top" secondItem="c4o-ue-20E" secondAttribute="top" id="3t2-ic-pES"/>
+                            <constraint firstItem="o4N-99-SfT" firstAttribute="centerX" secondItem="c4o-ue-20E" secondAttribute="centerX" id="4Dz-3j-pOM"/>
+                            <constraint firstItem="gCJ-ce-bH4" firstAttribute="centerY" secondItem="pBh-d1-Kee" secondAttribute="centerY" id="5xD-fh-fYb"/>
+                            <constraint firstItem="Je9-5s-abq" firstAttribute="leading" secondItem="3dY-gE-vWF" secondAttribute="leading" id="Hnk-eE-yyq"/>
+                            <constraint firstItem="pBh-d1-Kee" firstAttribute="leading" secondItem="3dY-gE-vWF" secondAttribute="leading" constant="20" id="LU6-yG-TGS"/>
+                            <constraint firstItem="pBh-d1-Kee" firstAttribute="top" secondItem="Je9-5s-abq" secondAttribute="bottom" constant="20" id="QmW-3m-Fn9"/>
+                            <constraint firstItem="3dY-gE-vWF" firstAttribute="trailing" secondItem="gCJ-ce-bH4" secondAttribute="trailing" constant="20" id="SEA-Nv-RQV"/>
+                            <constraint firstItem="o4N-99-SfT" firstAttribute="top" secondItem="gxm-wU-Osl" secondAttribute="bottom" constant="20" id="W0Z-I9-YJP"/>
+                            <constraint firstItem="gxm-wU-Osl" firstAttribute="leading" secondItem="3dY-gE-vWF" secondAttribute="leading" constant="20" id="ZKt-Sw-2DX"/>
+                            <constraint firstItem="3dY-gE-vWF" firstAttribute="trailing" secondItem="gxm-wU-Osl" secondAttribute="trailing" constant="20" id="dKM-nb-4Jm"/>
+                            <constraint firstItem="Je9-5s-abq" firstAttribute="trailing" secondItem="3dY-gE-vWF" secondAttribute="trailing" id="fQv-GU-AF0"/>
+                            <constraint firstItem="gCJ-ce-bH4" firstAttribute="leading" secondItem="pBh-d1-Kee" secondAttribute="trailing" constant="20" id="fVW-Td-JJs"/>
+                            <constraint firstItem="gxm-wU-Osl" firstAttribute="top" secondItem="pBh-d1-Kee" secondAttribute="bottom" constant="20" id="iGy-aL-mhz"/>
+                            <constraint firstItem="3dY-gE-vWF" firstAttribute="bottom" secondItem="o4N-99-SfT" secondAttribute="bottom" constant="20" id="jTv-wr-0WY"/>
+                            <constraint firstItem="3dY-gE-vWF" firstAttribute="trailing" secondItem="o4N-99-SfT" secondAttribute="trailing" constant="20" id="syN-Qa-gtT"/>
+                            <constraint firstItem="o4N-99-SfT" firstAttribute="leading" secondItem="3dY-gE-vWF" secondAttribute="leading" constant="20" id="yUA-fV-x0o"/>
+                        </constraints>
+                        <viewLayoutGuide key="safeArea" id="3dY-gE-vWF"/>
+                    </view>
+                    <connections>
+                        <outlet property="emailLbl" destination="gCJ-ce-bH4" id="Flh-2u-Wz4"/>
+                        <outlet property="postBtn" destination="o4N-99-SfT" id="hUy-P4-0Ea"/>
+                        <outlet property="profilImg" destination="pBh-d1-Kee" id="DIB-Tw-MsU"/>
+                        <outlet property="textView" destination="gxm-wU-Osl" id="tcw-6p-vJC"/>
+                    </connections>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="Sbd-aj-QaR" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="1556" y="-675.11244377811101"/>
         </scene>
         <!--Profil-->
         <scene sceneID="VRc-uy-ss9">
@@ -139,7 +260,7 @@
                                         <constraints>
                                             <constraint firstAttribute="height" constant="30" id="1yT-pi-wzf"/>
                                         </constraints>
-                                        <fontDescription key="fontDescription" name="AvenirNext-Bold" family="Avenir Next" pointSize="18"/>
+                                        <fontDescription key="fontDescription" name="AvenirNext-Medium" family="Avenir Next" pointSize="18"/>
                                         <color key="textColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                         <nil key="highlightedColor"/>
                                     </label>
