--- a/breakpoint/breakpoint/Base.lproj/Main.storyboard
+++ b/breakpoint/breakpoint/Base.lproj/Main.storyboard
@@ -56,13 +56,55 @@
                                 <rect key="frame" x="0.0" y="70" width="375" height="548"/>
                                 <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                 <prototypes>
-                                    <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" preservesSuperviewLayoutMargins="YES" selectionStyle="default" indentationWidth="10" id="cAp-e6-tXM">
+                                    <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" preservesSuperviewLayoutMargins="YES" selectionStyle="default" indentationWidth="10" id="cAp-e6-tXM" customClass="FeedCell" customModule="breakpoint" customModuleProvider="target">
                                         <rect key="frame" x="0.0" y="28" width="375" height="100"/>
                                         <autoresizingMask key="autoresizingMask"/>
                                         <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" preservesSuperviewLayoutMargins="YES" insetsLayoutMarginsFromSafeArea="NO" tableViewCell="cAp-e6-tXM" id="JoC-yb-UDq">
                                             <rect key="frame" x="0.0" y="0.0" width="375" height="100"/>
                                             <autoresizingMask key="autoresizingMask"/>
+                                            <subviews>
+                                                <imageView userInteractionEnabled="NO" contentMode="scaleAspectFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="defaultProfileImage" translatesAutoresizingMaskIntoConstraints="NO" id="hzu-lK-cfY">
+                                                    <rect key="frame" x="10" y="10" width="50" height="50"/>
+                                                    <constraints>
+                                                        <constraint firstAttribute="width" constant="50" id="ni2-RJ-CGm"/>
+                                                        <constraint firstAttribute="height" constant="50" id="puh-h6-Tdj"/>
+                                                    </constraints>
+                                                </imageView>
+                                                <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" translatesAutoresizingMaskIntoConstraints="NO" id="gSf-QQ-QRZ">
+                                                    <rect key="frame" x="70" y="10" width="295" height="80"/>
+                                                    <subviews>
+                                                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="soufiane.salouf@gmail.com" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="9dS-qk-Gmm">
+                                                            <rect key="frame" x="0.0" y="0.0" width="295" height="30"/>
+                                                            <constraints>
+                                                                <constraint firstAttribute="height" constant="30" id="7c8-WE-juF"/>
+                                                            </constraints>
+                                                            <fontDescription key="fontDescription" name="AvenirNext-Regular" family="Avenir Next" pointSize="17"/>
+                                                            <color key="textColor" white="0.33333333333333331" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                                            <nil key="highlightedColor"/>
+                                                        </label>
+                                                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Hola Amigos !" textAlignment="natural" lineBreakMode="tailTruncation" numberOfLines="5" baselineAdjustment="alignBaselines" minimumFontSize="9" translatesAutoresizingMaskIntoConstraints="NO" id="lF0-LB-GOe">
+                                                            <rect key="frame" x="0.0" y="30" width="295" height="50"/>
+                                                            <fontDescription key="fontDescription" name="AvenirNext-Regular" family="Avenir Next" pointSize="12"/>
+                                                            <color key="textColor" white="0.33333333333333331" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                                            <nil key="highlightedColor"/>
+                                                        </label>
+                                                    </subviews>
+                                                </stackView>
+                                            </subviews>
+                                            <constraints>
+                                                <constraint firstItem="hzu-lK-cfY" firstAttribute="top" secondItem="JoC-yb-UDq" secondAttribute="top" constant="10" id="0cY-us-6It"/>
+                                                <constraint firstAttribute="bottom" secondItem="gSf-QQ-QRZ" secondAttribute="bottom" constant="10" id="15K-C1-Ih2"/>
+                                                <constraint firstItem="gSf-QQ-QRZ" firstAttribute="top" secondItem="JoC-yb-UDq" secondAttribute="top" constant="10" id="dus-sl-a6b"/>
+                                                <constraint firstAttribute="trailing" secondItem="gSf-QQ-QRZ" secondAttribute="trailing" constant="10" id="pZ2-lH-lIO"/>
+                                                <constraint firstItem="gSf-QQ-QRZ" firstAttribute="leading" secondItem="hzu-lK-cfY" secondAttribute="trailing" constant="10" id="pee-dn-EUj"/>
+                                                <constraint firstItem="hzu-lK-cfY" firstAttribute="leading" secondItem="JoC-yb-UDq" secondAttribute="leading" constant="10" id="ws2-pS-FYQ"/>
+                                            </constraints>
                                         </tableViewCellContentView>
+                                        <connections>
+                                            <outlet property="contentLbl" destination="lF0-LB-GOe" id="w8b-6R-mG3"/>
+                                            <outlet property="emailLbl" destination="lF0-LB-GOe" id="YPO-oM-FnU"/>
+                                            <outlet property="profileImage" destination="hzu-lK-cfY" id="mXZ-BX-MQT"/>
+                                        </connections>
                                     </tableViewCell>
                                 </prototypes>
                             </tableView>
