--- a/breakpoint/breakpoint/Base.lproj/Main.storyboard
+++ b/breakpoint/breakpoint/Base.lproj/Main.storyboard
@@ -546,7 +546,7 @@
                                                 <color key="textColor" white="0.33333333333333331" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                                 <nil key="highlightedColor"/>
                                             </label>
-                                            <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" placeholder="Enter an email" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="2is-EJ-57B" customClass="InsetTextField" customModule="breakpoint" customModuleProvider="target">
+                                            <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" placeholder="Enter an email..." textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="2is-EJ-57B" customClass="InsetTextField" customModule="breakpoint" customModuleProvider="target">
                                                 <rect key="frame" x="0.0" y="159" width="250" height="60"/>
                                                 <constraints>
                                                     <constraint firstAttribute="height" constant="60" id="4JZ-gm-ZG3"/>
@@ -566,30 +566,67 @@
                                             </view>
                                         </subviews>
                                     </stackView>
-                                    <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="none" rowHeight="-1" estimatedRowHeight="-1" sectionHeaderHeight="28" sectionFooterHeight="28" translatesAutoresizingMaskIntoConstraints="NO" id="AVp-mY-DMQ">
-                                        <rect key="frame" x="46" y="288" width="250" height="257"/>
+                                    <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="none" rowHeight="60" estimatedRowHeight="-1" sectionHeaderHeight="28" sectionFooterHeight="28" translatesAutoresizingMaskIntoConstraints="NO" id="AVp-mY-DMQ">
+                                        <rect key="frame" x="0.0" y="288" width="343" height="277"/>
                                         <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                         <prototypes>
-                                            <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" preservesSuperviewLayoutMargins="YES" selectionStyle="default" indentationWidth="10" id="buI-Ka-s3Y">
-                                                <rect key="frame" x="0.0" y="28" width="250" height="44"/>
+                                            <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" preservesSuperviewLayoutMargins="YES" selectionStyle="default" indentationWidth="10" reuseIdentifier="userCell" rowHeight="60" id="buI-Ka-s3Y" customClass="UserCell" customModule="breakpoint" customModuleProvider="target">
+                                                <rect key="frame" x="0.0" y="28" width="343" height="60"/>
                                                 <autoresizingMask key="autoresizingMask"/>
                                                 <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" preservesSuperviewLayoutMargins="YES" insetsLayoutMarginsFromSafeArea="NO" tableViewCell="buI-Ka-s3Y" id="Oo2-WR-XwB">
-                                                    <rect key="frame" x="0.0" y="0.0" width="250" height="44"/>
+                                                    <rect key="frame" x="0.0" y="0.0" width="343" height="60"/>
                                                     <autoresizingMask key="autoresizingMask"/>
+                                                    <subviews>
+                                                        <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="defaultProfileImage" translatesAutoresizingMaskIntoConstraints="NO" id="ECH-TO-24c">
+                                                            <rect key="frame" x="10" y="6" width="44" height="44"/>
+                                                            <constraints>
+                                                                <constraint firstAttribute="width" constant="44" id="K4c-gS-HKB"/>
+                                                                <constraint firstAttribute="height" constant="44" id="TRg-eR-aTB"/>
+                                                            </constraints>
+                                                        </imageView>
+                                                        <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="whiteCheckmark" translatesAutoresizingMaskIntoConstraints="NO" id="Rto-uG-fhB">
+                                                            <rect key="frame" x="313" y="6" width="20" height="48"/>
+                                                            <constraints>
+                                                                <constraint firstAttribute="width" constant="20" id="SKH-Xp-0by"/>
+                                                            </constraints>
+                                                        </imageView>
+                                                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="soufiane.salouf@gmail.com" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" minimumFontSize="8" translatesAutoresizingMaskIntoConstraints="NO" id="dS5-ch-doW">
+                                                            <rect key="frame" x="64" y="18" width="239" height="20"/>
+                                                            <fontDescription key="fontDescription" name="HelveticaNeue" family="Helvetica Neue" pointSize="17"/>
+                                                            <color key="textColor" white="0.33333333333333331" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                                            <nil key="highlightedColor"/>
+                                                        </label>
+                                                    </subviews>
+                                                    <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                                    <constraints>
+                                                        <constraint firstItem="Rto-uG-fhB" firstAttribute="top" secondItem="Oo2-WR-XwB" secondAttribute="top" constant="6" id="4jn-wU-3EZ"/>
+                                                        <constraint firstItem="dS5-ch-doW" firstAttribute="leading" secondItem="ECH-TO-24c" secondAttribute="trailing" constant="10" id="BRQ-CX-kWa"/>
+                                                        <constraint firstItem="ECH-TO-24c" firstAttribute="top" secondItem="Oo2-WR-XwB" secondAttribute="top" constant="6" id="HHH-Cl-yWY"/>
+                                                        <constraint firstItem="Rto-uG-fhB" firstAttribute="leading" secondItem="dS5-ch-doW" secondAttribute="trailing" constant="10" id="aEO-js-V12"/>
+                                                        <constraint firstAttribute="trailing" secondItem="Rto-uG-fhB" secondAttribute="trailing" constant="10" id="e6B-tJ-PBW"/>
+                                                        <constraint firstItem="dS5-ch-doW" firstAttribute="centerY" secondItem="ECH-TO-24c" secondAttribute="centerY" id="l4N-2M-3Em"/>
+                                                        <constraint firstAttribute="bottom" secondItem="Rto-uG-fhB" secondAttribute="bottom" constant="6" id="oh9-0K-nhZ"/>
+                                                        <constraint firstItem="ECH-TO-24c" firstAttribute="leading" secondItem="Oo2-WR-XwB" secondAttribute="leading" constant="10" id="qib-aw-GsI"/>
+                                                    </constraints>
                                                 </tableViewCellContentView>
+                                                <connections>
+                                                    <outlet property="checkImage" destination="Rto-uG-fhB" id="Odl-YP-dar"/>
+                                                    <outlet property="emailLbl" destination="dS5-ch-doW" id="38x-mF-aoD"/>
+                                                    <outlet property="profileImg" destination="ECH-TO-24c" id="sSg-Hp-Ml0"/>
+                                                </connections>
                                             </tableViewCell>
                                         </prototypes>
                                     </tableView>
                                 </subviews>
                                 <color key="backgroundColor" white="0.75" alpha="0.40000000000000002" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                 <constraints>
-                                    <constraint firstItem="AVp-mY-DMQ" firstAttribute="leading" secondItem="jLu-Ad-vr4" secondAttribute="leading" constant="46" id="Q64-Or-YlS"/>
-                                    <constraint firstAttribute="trailing" secondItem="AVp-mY-DMQ" secondAttribute="trailing" constant="47" id="WjP-tg-vYj"/>
+                                    <constraint firstItem="AVp-mY-DMQ" firstAttribute="leading" secondItem="jLu-Ad-vr4" secondAttribute="leading" id="Q64-Or-YlS"/>
+                                    <constraint firstAttribute="trailing" secondItem="AVp-mY-DMQ" secondAttribute="trailing" id="WjP-tg-vYj"/>
                                     <constraint firstItem="AVp-mY-DMQ" firstAttribute="top" secondItem="1gA-Se-g7Z" secondAttribute="bottom" constant="5" id="c8C-Xa-ZvH"/>
                                     <constraint firstAttribute="width" constant="343" id="dXN-bX-Ssg"/>
                                     <constraint firstItem="1gA-Se-g7Z" firstAttribute="leading" secondItem="jLu-Ad-vr4" secondAttribute="leading" constant="46" id="gY4-Rc-uJC"/>
                                     <constraint firstAttribute="trailing" secondItem="1gA-Se-g7Z" secondAttribute="trailing" constant="47" id="knZ-bG-CeY"/>
-                                    <constraint firstAttribute="bottom" secondItem="AVp-mY-DMQ" secondAttribute="bottom" constant="20" id="q6w-2b-TLc"/>
+                                    <constraint firstAttribute="bottom" secondItem="AVp-mY-DMQ" secondAttribute="bottom" id="q6w-2b-TLc"/>
                                     <constraint firstItem="1gA-Se-g7Z" firstAttribute="centerX" secondItem="jLu-Ad-vr4" secondAttribute="centerX" id="wy5-zc-mcY"/>
                                     <constraint firstItem="1gA-Se-g7Z" firstAttribute="top" secondItem="jLu-Ad-vr4" secondAttribute="top" constant="47" id="zRs-f9-vhI"/>
                                 </constraints>
@@ -880,6 +917,7 @@
         <image name="feed-tabIcon" width="25" height="21"/>
         <image name="groups-tabIcon" width="25" height="23"/>
         <image name="me-tabIcon" width="25" height="25"/>
+        <image name="whiteCheckmark" width="18" height="14"/>
     </resources>
     <color key="tintColor" red="0.25882352941176467" green="0.32941176470588235" blue="0.72549019607843135" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
 </document>
